<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.liquibase.ext</groupId>
    <artifactId>liquibase-postgresql</artifactId>
    <version>3.4-SNAPSHOT</version>

    <name>Liquibase Postgresql Database Extension</name>
    <description>Adds additional Postgresql-specific Liquibase functionality</description>
    <url>https://github.com/liquibase/liquibase-postgresql</url>

    <organization>
        <name>Liquibase.org</name>
        <url>http://www.liquibase.org</url>
    </organization>

    <properties>
        <jdk.version>1.8</jdk.version>
        <liquibase.version>3.4.1</liquibase.version>
        <junit.version>4.12</junit.version>
        <dbunit.version>2.5.1</dbunit.version>
        <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
        <snakeyaml.version>1.16</snakeyaml.version>
    </properties>

    <licenses>
        <license>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <name>Apache License, Version 2.0</name>
        </license>
    </licenses>

    <issueManagement>
        <url>https://github.com/liquibase/liquibase-postgresql/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:http://github.com/liquibase/liquibase-postgresql.git</connection>
        <url>https://github.com/liquibase/liquibase-postgresql</url>
    </scm>

    <developers>
        <developer>
            <id>nvoxland</id>
            <name>Nathan Voxland</name>
            <email>nathan.voxland@liquibase.org</email>
            <url>http://nathan.voxland.net</url>
            <organizationUrl>http://nathan.voxland.net/</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
        <developer>
            <id>lreeh</id>
            <name>Lucas Reeh</name>
            <email>lreeh@tugraz.at</email>
            <url>https://softwaredesign.foundation</url>
            <organizationUrl>https://softwaredesign.foundation</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibase.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>

                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <source>${jdk.version}</source>
                        <target>${jdk.version}</target>
                        <optimize>true</optimize>
                        <debug>true</debug>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>enforce-java</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireJavaVersion>
                                        <version>${jdk.version}</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>1.9.1</version>
                </plugin>


                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.2</version>
                    <configuration>
                        <stagingRepository>/tmp/maven-snapshot</stagingRepository>
                        <mavenExecutorId>forked-path</mavenExecutorId>
                        <pushChanges>false</pushChanges>
                    </configuration>
                </plugin>


                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <configuration>
                        <skip>false</skip>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.5</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>default-deploy</id>
                            <phase>deploy</phase>
                            <goals>
                                <goal>deploy</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <serverId>sonatype-nexus-staging</serverId>
                        <nexusUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</nexusUrl>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <!--    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>-->

    <distributionManagement>
        <repository>
            <uniqueVersion>false</uniqueVersion>
            <id>sd.f-releases</id>
            <name>softwaredesign.foundation Releases</name>
            <url>https://softwaredesign.foundation/nexus/content/repositories/sd.f-releases</url>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>sd.f-snapshots</id>
            <name>softwaredesign.foundation Snapshots</name>
            <url>https://softwaredesign.foundation/nexus/content/repositories/sd.f-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <!-- Required for deployment to Sonatype -->
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
    </reporting>

</project>
